// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Button should default to standard variant 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: 20px;
  padding: 2px 30px;
  border: 2px solid;
  outline: none;
  cursor: pointer;
  font-size: 18px;
  line-height: 1.5em;
  color: hsl(200,96%,11%);
  background-color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0:hover,
.c0:focus {
  color: hsl(0,0%,100%);
  background-color: hsl(200,96%,11%);
  border-color: hsl(200,96%,11%);
}

<button
    class="c0"
    type="button"
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`component: Button should render call to action variant 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: 20px;
  padding: 2px 30px;
  border: 2px solid;
  outline: none;
  cursor: pointer;
  font-size: 18px;
  line-height: 1.5em;
  color: hsl(0,0%,100%);
  background-color: hsl(200,96%,35%);
  border-color: hsl(200,96%,35%);
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0:hover,
.c0:focus {
  color: hsl(0,0%,100%);
  background-color: hsl(200,96%,11%);
  border-color: hsl(200,96%,11%);
}

<button
    class="c0"
    type="button"
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`component: Button should render disabled variant 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: 20px;
  padding: 2px 30px;
  border: 2px solid;
  outline: none;
  cursor: pointer;
  font-size: 18px;
  line-height: 1.5em;
  color: hsl(0,0%,70%);
  background-color: hsl(0,0%,90%);
  border-color: hsl(0,0%,90%);
  cursor: not-allowed;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

<button
    class="c0"
    disabled=""
    type="button"
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`component: Button should render inverse call to action variant 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: 20px;
  padding: 2px 30px;
  border: 2px solid;
  outline: none;
  cursor: pointer;
  font-size: 18px;
  line-height: 1.5em;
  color: hsl(0,0%,100%);
  background-color: hsl(200,96%,35%);
  border-color: hsl(200,96%,35%);
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0:hover,
.c0:focus {
  color: hsl(200,96%,35%);
  background-color: hsl(0,0%,100%);
  border-color: hsl(0,0%,100%);
}

<button
    class="c0"
    type="button"
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`component: Button should render inverse disabled variant 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: 20px;
  padding: 2px 30px;
  border: 2px solid;
  outline: none;
  cursor: pointer;
  font-size: 18px;
  line-height: 1.5em;
  color: hsl(0,0%,70%);
  background-color: hsl(0,0%,90%);
  border-color: hsl(0,0%,90%);
  cursor: not-allowed;
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

<button
    class="c0"
    disabled=""
    type="button"
  >
    }&gt;Click me!
  </button>
</DocumentFragment>
`;

exports[`component: Button should render inverse standard variant 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: 20px;
  padding: 2px 30px;
  border: 2px solid;
  outline: none;
  cursor: pointer;
  font-size: 18px;
  line-height: 1.5em;
  color: hsl(0,0%,100%);
  background-color: hsl(200,96%,11%);
  border-color: hsl(0,0%,100%);
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0:hover,
.c0:focus {
  color: hsl(200,96%,11%);
  background-color: hsl(0,0%,100%);
  border-color: hsl(0,0%,100%);
}

<button
    class="c0"
    type="button"
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`component: Button should render standard variant 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: 20px;
  padding: 2px 30px;
  border: 2px solid;
  outline: none;
  cursor: pointer;
  font-size: 18px;
  line-height: 1.5em;
  color: hsl(200,96%,11%);
  background-color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0:hover,
.c0:focus {
  color: hsl(0,0%,100%);
  background-color: hsl(200,96%,11%);
  border-color: hsl(200,96%,11%);
}

<button
    class="c0"
    type="button"
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`component: Button should support margin space props 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: 20px;
  padding: 2px 30px;
  border: 2px solid;
  outline: none;
  cursor: pointer;
  font-size: 18px;
  line-height: 1.5em;
  margin-top: 32px;
  color: hsl(200,96%,11%);
  background-color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

.c0 svg {
  display: inline-block;
  margin-top: -4px;
}

.c0:hover,
.c0:focus {
  color: hsl(0,0%,100%);
  background-color: hsl(200,96%,11%);
  border-color: hsl(200,96%,11%);
}

<button
    class="c0"
    type="button"
  >
    I have margins!
  </button>
</DocumentFragment>
`;
